<resources>
    <string name="app_name">Firstchat</string>
    <string name="welcome_to_first_chat">Welcome to First Chat</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="click_for_sign_up">Click for sign up</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="glance">Glance</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="jaideep_kumar">Jaideep Kumar</string>
    <string name="message">Message</string>
    <string name="hello_there_nwelcome_back">Hello There!\nWelcome Back</string>
    <string name="login_nto">Login\nTo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_non">Register\non</string>
    <string name="hello_there_nwelcome">Hello There!\nWelcome</string>
    <string name="already_hava_an_account">Already hava an account?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="chat">Chat</string>
    <string name="story">Story</string>
    <string name="profile">Profile</string>
</resources>