<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chat">

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.firstchat.ui.chats.ChatsFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_story"
        android:name="com.example.firstchat.ui.story.StoryFragment"
        android:label="@string/story"
        tools:layout="@layout/fragment_story" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.firstchat.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>