<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_A100"
    android:orientation="vertical"
    tools:context=".auth.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/pink_A100"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/bungee"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/register_non"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@drawable/auth_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there_nwelcome"
            android:fontFamily="@font/bungee"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:padding="15dp" />

        <EditText
            android:id="@+id/siUserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/siEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/email_id"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/siPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_baseline_key_24"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textSize="14sp" />


        <Button
            android:id="@+id/siSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/blue_gray_800"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:cornerRadius="10dp" />


        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_hava_an_account"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:padding="8dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>